--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,8 @@
 const path = require('path');
+require('dotenv').config()
 
 module.exports = {
-    'config': path.resolve('./database/config', 'config.json'),
+    'config': path.resolve('./database/config', 'config.js'),
     'models-path': path.resolve('./models'),
     'migrations-path': path.resolve('./database', 'migrations'),
     'seeders-path': path.resolve('./database', 'seeders')
